--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -17,7 +17,7 @@ banner_text_block(bool): show banner text block, default true
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>{{ titletag if titletag is defined else pagetitle }}</title>
+    <title>{{ titletag|default(pagetitle) }}</title>
 
     {% block og %}
 <meta property="og:site_name" content="Report mobile and Internet Service Providers blocking sites" />
@@ -62,37 +62,7 @@ banner_text_block(bool): show banner text block, default true
               {% endif %}
           </div>
           <div class="col-md-11">
-          Transparency campaign from <a href="https://www.openrightsgroup.org"><img src="/static/img/org_horiz.png" title="Open Rigts Group Logo" /></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="topstrip2">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-5" style=""><span style="font-size: 150%; font-family: 'Roboto',sans-serif">
-                  <strong><em>Please help us</em></strong> make UK court orders
-                  <strong><em>transparent and accountable</em></strong>
-          </span></div>  
-          <div class="col-md-5" style="">
-
-            <div>
-                <div style="font-size: 200%; text-align: center; margin-bottom: 0.25em">We need £5,000</div>
-                <div class="progress" style="margin-bottom: 0px">
-                    <div class="progress-bar" role="progressbar" style="width: {{g.remote_chunks.fundraisePercent|int}}%" aria-valuenow="{{g.remote_chunks.fundraisePercent|int}}" aria-valuemax="100" aria-valuemin="0" /></div>
-                </div>
-                <div style="">£0
-                    <span style="float: right">£5,000</span>
-                </div>
-            </div>
-          </div>
-          <div class="col-md-2" style="vertical-align: bottom; text-align: right">
-                <form action="https://www.paypal.com/cgi-bin/webscr" class="" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="NPU6HTUCX53QQ">
-                    <input type="submit" class="btn btn-primary btn-lg" value="Donate">
-                    <!-- <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1"> -->
-                </form>
+          A transparency campaign from <a href="https://www.openrightsgroup.org"><img src="/static/img/org_horiz.png" title="Open Rigts Group Logo" /></a>
           </div>
         </div>
       </div>
@@ -101,12 +71,15 @@ banner_text_block(bool): show banner text block, default true
     <div class="container">
 
     <div class="row menurow">
-    <div class="col-md-5">
-        <a href="/" title="Return to homepage"><img width="100%" src="/static/img/blocked-logo.svg" alt="Blocked logo" /></a>
+        <div class="col-md-5">
+            <a href="/" title="Return to homepage"><img width="100%" src="/static/img/blocked-logo.svg" alt="Blocked logo" /></a>
+        </div>
     </div>
-    <div class="col-md-7 menu">
-      {{ chunks.main_menu() }}
-    </div>
+
+    <div class="row">
+        <div class="col-md-12 menu">
+          {{ chunks.main_menu() }}
+        </div>
     </div>
     
     <div class="row">
