--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -113,6 +113,12 @@ banner_text_block(bool): show banner text block, default true
 
 
     {% block body %}{%endblock%}
+    <div class="row">
+        <div class="col-md-12">
+    <footer>
+        {{ chunks.footer_menu() }}
+    </footer>
+        </div>
     </div> <!-- /.container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
