--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -111,8 +111,9 @@ piwikTracker.enableLinkTracking();
 {% endmacro %}
 
 {% macro footer_menu() %}
-            <a class="" href="/stats/probes">Status</a>
+            <a class="" href="https://www.openrightsgroup.org/contact/">Stay in touch</a>
             <a class="" href="/support">Support</a>
             <a class="" href="/credits">Credits</a>
-            <a class="" href="https://www.openrightsgroup.org/contact/">Contact</a>
+            <a class="" href="/stats/probes">Probe Status</a>
+            <a class="" href="/support">Get involved</a>
 {% endmacro %}
