hide contact form; openrightsgroup/blocked-org-uk#387

--- a/BlockedFrontend/templates/cms/layout_2x3.page.html
+++ b/BlockedFrontend/templates/cms/layout_2x3.page.html
@@ -44,7 +44,7 @@
 </div>
 
 
-{{ chunks.contactForm('shaded-row') }}
+{# chunks.contactForm('shaded-row') #}
 
 <div class="row shaded-row">
 {{ chunks.contactChunk() }}
