--- a/BlockedFrontend/templates/cms/personal-stories.html
+++ b/BlockedFrontend/templates/cms/personal-stories.html
@@ -12,7 +12,7 @@
 {{g.remote_content.mainContent|replace('"assets','"https://www.blocked.org.uk/assets')|safe}}
 
 
-{{ chunks.contactForm() }}
+{# chunks.contactForm() #}
 
 
 <div class="row shaded-row">
