--- a/BlockedFrontend/templates/error.html
+++ b/BlockedFrontend/templates/error.html
@@ -10,7 +10,7 @@ An error has occurred.  Please try again later.
 
 
 
-{{ chunks.contactForm() }}
+{# chunks.contactForm() #}
 
 
 <div class="row shaded-row">
