--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -89,7 +89,7 @@
     <div class="row">
         <div class="col-md-8">
 
-<h3>Has this site been blocked in error?</h3>
+<h3>Help unblock this website</h3>
 
 <div class="site" >
   <div  class="randomurl hidden-xs"><a href="{{site.url}}" target="_blank" rel="nofollow">{{site.url}}</a></div>
