menu updates; openrightsgroup/blocked-org-uk#387

--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -111,9 +111,12 @@ piwikTracker.enableLinkTracking();
 {% endmacro %}
 
 {% macro footer_menu() %}
-            <a class="" href="https://www.openrightsgroup.org/contact/">Stay in touch</a>
+            <a class="" href="https://action.openrightsgroup.org/sign-up-for-org-email-updates">Stay in touch</a>
             <a class="" href="/support">Support</a>
             <a class="" href="/credits">Credits</a>
             <a class="" href="/stats/probes">Probe Status</a>
             <a class="" href="/support">Get involved</a>
+            <a class="" href="https://www.openrightsgroup.org/donate/">Donate</a>
+            <a class="" href="https://www.openrightsgroup.org/contact/">Contact</a>
+            <a class="" href="https://www.openrightsgroup.org/privacy/">Privacy Policy</a>
 {% endmacro %}
