new frontpage tweaks; openrightsgroup/blocked-org-uk#387

--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -53,8 +53,8 @@ body {
 }
 
 .row {
-  /*padding-top: 0.5em;
-  padding-bottom: 1em; */
+  padding-top: 0.5em;
+  /*padding-bottom: 1em; */
 }
 .menu, footer {
     text-align: center;
