--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:600|Roboto');
 
 h1, .pctlg, #blockcount {
-  margin-top: 0px;
+  margin-top: 0.25em;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   font-size: 46px;
