--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -83,7 +83,7 @@
 {% if config.MODULE_UNBLOCK %}
 {{ menu_link("Reported Sites", '/reported-sites') }}
 {% endif %}
-{{ menu_link("Court Order Blocks", '/legal-blocks') }}
+{# menu_link("Court Order Blocks", '/legal-blocks') #}
 {{ menu_link("Your Stories", '/personal-stories') }}
 
 {{ menu_link_eq("Statistics", '/stats') }}
@@ -112,9 +112,10 @@ piwikTracker.enableLinkTracking();
 
 {% macro footer_menu() %}
             <a class="" href="https://action.openrightsgroup.org/sign-up-for-org-email-updates">Stay in touch</a>
-            <a class="" href="/support">Support</a>
+            <!-- <a class="" href="/support">Support</a> -->
             <a class="" href="/credits">Credits</a>
             <a class="" href="/stats/probes">Probe Status</a>
+            <a class="" href="/legal-blocks">Court Ordered Blocks</a>
             <a class="" href="/support">Get involved</a>
             <a class="" href="https://www.openrightsgroup.org/donate/">Donate</a>
             <a class="" href="https://www.openrightsgroup.org/contact/">Contact</a>
