--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -27,11 +27,12 @@
     <div class="row">
         <div class="col-md-5">
 
+<h3>Unblock your website</h3>
 <form action="{{ url_for('site.check_post') }}" method="POST">
 <input type="hidden" name="submit" value="{{live | lower }}" />
 
 <div class="form-group">
-  <label for="url">Website address</label>
+  <label for="url" class="sr-only">Website address</label>
   <div class="control-group">
     <div class="input-group">
     <input type="text"  placeholder="http://" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" name="url" id="url" class="form-control" />
