--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -26,7 +26,7 @@ h3, .pctdesc, .pagerole, .page_title {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 34px;
 }
 
 a {
@@ -49,12 +49,12 @@ body {
 }
 
 .menurow {
-  margin-top: 0.4em;
+  margin-top: 1.5em;
 }
 
 .row {
-  /*padding-top: 0.5em;
-  padding-bottom: 1em; */
+  padding-top: 0.5em;
+  padding-bottom: 2em;
 }
 .menu, footer {
     text-align: center;
