--- a/BlockedFrontend/templates/stats/stats.html
+++ b/BlockedFrontend/templates/stats/stats.html
@@ -33,7 +33,7 @@
 {% endmacro %}
 
 {% macro data_table(source, id=None, hide=None) %}
-         <table id="{{ id }}" class="table table-striped table-compressed col-md-10">
+         <table id="{{ id }}" class="table table-striped table-compressed">
             {% set header = source.next() %}
             <tr>
                 <th class="col-md-4">{{ header[0] }}</th>
@@ -54,7 +54,7 @@
 
 {% block body %}
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-9">
         <h2><a name="notonlyadult"></a>Not only adult content is being blocked</h2>
         {{ backtotop() }}
         <p>The domains in these categories were identified by keyword searches
