change URL layout for /next; openrightsgroup/cmp-issues#244

--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -125,7 +125,7 @@ to the ISPs to have the site reclassified and removed from their block lists.</p
   </div>
 
   <div class="" >
-      <a href="{{url_for('unblock.browse_next',url=site.url) }}" class="btn btn-default">See another blocked site</a>
+      <a href="{{url_for('unblock.browse_next',after=site.url) }}" class="btn btn-default">See another blocked site</a>
   </div>
   </div> <!-- /.buttonlist -->
 
