--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -108,6 +108,11 @@ banner_text_block(bool): show banner text block, default true
     <div class="col-md-{{ banner_text_columns | default('6') }}">
       <p {{rmt.remote_style('banner_text')}}>{%block banner_text%}{% endblock %}</p>
     </div>
+    {% if menu_block_alt| default(False) %}
+    <div class="col-md-4 col-md-offset-2 pagemenu pagemenu_alt">
+      {% block page_menu_alt %}{% endblock %}
+    </div>
+    {% endif %}
     </div>
     {% endif %}
 
