--- a/BlockedFrontend/templates/cms/remote_content2x3.html
+++ b/BlockedFrontend/templates/cms/remote_content2x3.html
@@ -1,5 +1,7 @@
 {% extends "layout_2x3.page.html" %}
 
+
+{% set menu_block_alt=True %}{# show menu block alongside banner text, instead of pagetitle block #}
 {%set pagetitle = content.title %}
 
 {% block banner_text %}
@@ -33,6 +35,6 @@
 {% endblock %}
 
 
-{% block page_menu %}
+{% block page_menu_alt %}
 {{ content.page_menu | safe }}
 {% endblock %}
