align page menu for function pages; openrightsgroup/blocked-org-uk#389

--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -96,6 +96,10 @@ footer {
   font-family: 'Poppins', sans-serif;
 }
 
+.pagemenu-main {
+    padding-top: 3em;
+}
+
 .pagemenu div {
   margin-bottom: 0.2em;
 }
