change chart title (TLD); openrightsgroup/cmp-issues#247

--- a/BlockedFrontend/templates/stats/stats.html
+++ b/BlockedFrontend/templates/stats/stats.html
@@ -11,7 +11,7 @@
     <li><a href="#ispresponses">ISP Responses to reports</a></li>
     <li><a href="#replystats">Reply stats by ISP</a></li>
     <li><a href="#alexa">Alexa top 100,000 sites</a></li>
-    <li><a href="#ispblocks">ISP Blocks by domain</a></li>
+    <li><a href="#ispblocks">ISP Blocks by top-level domain</a></li>
 </ul>
 </a>
 
@@ -147,7 +147,7 @@
 
 <div class="row">
 <div class="col-md-12">
-    <h2><a name="ispblocks"></a>ISP Blocks by domain</h2>
+    <h2><a name="ispblocks"></a>ISP Blocks by top-level domain</h2>
         {{ backtotop() }}
 </div>
 </div>
