add remote text to stats page; openrightsgroup/blocked-org-uk#390

--- a/BlockedFrontend/templates/stats/stats.html
+++ b/BlockedFrontend/templates/stats/stats.html
@@ -1,8 +1,12 @@
 {% extends "BasicPage.page.html" %}
+{% import "remotecontent.part.html" as rmt %}
 
 {%set pagetitle = 'Internet Filtering Statistics' %}
 
 {% block banner_text %}
+
+{% call rmt.remote('banner_text') %}
+{% endcall %}
 
 <a name="navmenu">
 <ul>
